--- a/blogi/templates/blogi/post_list.html
+++ b/blogi/templates/blogi/post_list.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My Blog</title>
-</head>
-<body>
-    <h1><a href="#">Msangi Blog</a></h1>
-
+{% extends 'blogi/base.html' %}
+{% block content %}
     {% for post in posts %}
-       <div>
-           <p>Published:{{ post.published_date }}</p>
-           <h1><a href=""> {{ post.title }} </a></h1>
+       <div class="post">
+           <div class="date"><p>Published:{{ post.published_date }}</p></div>
+           <h1><a href="{% url 'post_detail' pk=post.pk %}"> {{ post.title }} </a></h1>
            <h1><{{ post.title }} </a></h1>
            <p>{{ post.text|linebreaksbr }}</p>
        </div>
     {% endfor %}
 
-</body>
-</html>
+{% endblock %}
