Add feature to allow user create blog posts from the frontend

--- a/blogi/static/css/blogi.css
+++ b/blogi/static/css/blogi.css
@@ -22,6 +22,13 @@ h1,h2,h3,h4{
  color: #828282;
 }
 
+.post-form-blog textarea{
+    width: 100%;
+}
+.post-form-blog .btn-primary{
+    float:right;
+}
+
 .post{
   margin-top: 5px;
   margin-bottom: 70px;
