--- a/blogi/templates/blogi/post_edit.html
+++ b/blogi/templates/blogi/post_edit.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'blogi/base.html' %}
+
+{% block content %}
+
+<h1>New Post</h1>
+<form method="POST" class="post-form-blog">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Save</button>
+</form>
+
+{% endblock %}
