--- a/blogi/templates/blogi/base.html
+++ b/blogi/templates/blogi/base.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/blogi.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 </head>
 <body>
 <div class="page-header"><h1><a href="{% url "post_list" %}">Msangi Blog</a></h1></div>
