--- a/blogi/templates/blogi/post_detail.html
+++ b/blogi/templates/blogi/post_detail.html
@@ -4,7 +4,12 @@
     {% if post.published_date %}
     <div class="date">
         {{ post.published_date }}
+<!--
+        <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+-->
     </div>
+    <a href="{% url 'post_edit' pk=post.pk %}"><i class="fa fa-edit fa-2x" style="color:#339af0"></i></a>
+
     {% endif %}
 
     <h1>{{ post.title }}</h1>
