--- a/blogi/static/css/blogi.css
+++ b/blogi/static/css/blogi.css
@@ -41,3 +41,10 @@ h1,h2,h3,h4{
 .post h1 a:visited{
   color: purple;
 }
+
+.top-menu{
+     color: #FFF;
+     float: right;
+     font-size: 26pt;
+     margin-right:20px;
+}
