--- a/blogi/templates/blogi/post_detail.html
+++ b/blogi/templates/blogi/post_detail.html
@@ -8,7 +8,10 @@
         <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
 -->
     </div>
-    <a href="{% url 'post_edit' pk=post.pk %}"><i class="fa fa-edit fa-2x" style="color:#339af0"></i></a>
+
+        {% if user.is_authenticated %}
+            <a href="{% url 'post_edit' pk=post.pk %}"><i class="fa fa-edit fa-2x" style="color:#339af0"></i></a>
+        {% endif %}
 
     {% endif %}
 
