--- a/blogi/templates/blogi/base.html
+++ b/blogi/templates/blogi/base.html
@@ -13,6 +13,7 @@
 <div class="page-header">
      {% if user.is_authenticated %}
           <div class="top-menu"><a href="{% url 'post_new' %}"><i class="fa fa-plus fa-2x"></i></a></div>
+          <div class="top-menu"><a href="{% url 'post_draft_list' %}"><i class="fa fa-edit fa-2x"></i></a></div>
      {% endif %}
     <h1><a href="{% url "post_list" %}">Msangi Blog</a></h1>
 </div>
