--- a/blogi/templates/blogi/post_list.html
+++ b/blogi/templates/blogi/post_list.html
@@ -5,7 +5,7 @@
            <div class="date"><p>Published:{{ post.published_date }}</p></div>
            <h1><a href="{% url 'post_detail' pk=post.pk %}"> {{ post.title }} </a></h1>
            <h1><{{ post.title }} </a></h1>
-           <p>{{ post.text|linebreaksbr }}</p>
+           <p>{{ post.text|truncatechars:50 }}</p>
        </div>
     {% endfor %}
 
