--- a/blogi/templates/blogi/base.html
+++ b/blogi/templates/blogi/base.html
@@ -3,17 +3,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Blog</title>
+    <title>{% block title%}{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/blogi.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 </head>
 <body>
+
 <div class="page-header">
      {% if user.is_authenticated %}
           <div class="top-menu"><a href="{% url 'post_new' %}"><i class="fa fa-plus fa-2x"></i></a></div>
           <div class="top-menu"><a href="{% url 'post_draft_list' %}"><i class="fa fa-edit fa-2x"></i></a></div>
+     {% else %}
+          <div class="top-menu"><a href="{% url 'login' %}"><i class="fas fa-sign-in-alt fa-2x"></i></a></div>
      {% endif %}
     <h1><a href="{% url "post_list" %}">Msangi Blog</a></h1>
 </div>
