--- a/blogi/templates/blogi/post_detail.html
+++ b/blogi/templates/blogi/post_detail.html
@@ -1,4 +1,7 @@
 {% extends 'blogi/base.html' %}
+
+{% block title %} post.title {% endblock %}
+
 {% block content %}
 <div class="post">
     {% if post.published_date %}
