--- a/blogi/templates/blogi/post_list.html
+++ b/blogi/templates/blogi/post_list.html
@@ -1,4 +1,5 @@
 {% extends 'blogi/base.html' %}
+{% block title %} Posts {% endblock %}
 {% block content %}
     {% for post in posts %}
        <div class="post">
