--- a/blogi/templates/blogi/base.html
+++ b/blogi/templates/blogi/base.html
@@ -15,6 +15,7 @@
      {% if user.is_authenticated %}
           <div class="top-menu"><a href="{% url 'post_new' %}"><i class="fa fa-plus fa-2x"></i></a></div>
           <div class="top-menu"><a href="{% url 'post_draft_list' %}"><i class="fa fa-edit fa-2x"></i></a></div>
+          <p class="top-menu">Hello, {{ user.username }} <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt fa-2x"></i></a></p>
      {% else %}
           <div class="top-menu"><a href="{% url 'login' %}"><i class="fas fa-sign-in-alt fa-2x"></i></a></div>
      {% endif %}
