--- a/blogi/templates/blogi/post_detail.html
+++ b/blogi/templates/blogi/post_detail.html
@@ -20,6 +20,24 @@
 
     <h1>{{ post.title }}</h1>
     <p>{{ post.text|linebreaksbr }}</p>
+
+    <hr>
+    <a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn btn-success">Add Comment</a>
+    <hr>
+
+    {% for comment in post.comments.all %}
+
+        <div class="comment">
+            <div class="date">{{ comment.created_date }}</div>
+            <strong>{{ comment.author }}</strong>
+          <p>{{ comment.text }}</p>
+        </div>
+
+      {% empty %}
+        <p>No Comments Yet.</p>
+
+
+    {% endfor %}
 </div>
 
 {% endblock %}
