--- a/blogi/templates/blogi/post_detail.html
+++ b/blogi/templates/blogi/post_detail.html
@@ -1,6 +1,6 @@
 {% extends 'blogi/base.html' %}
 
-{% block title %} post.title {% endblock %}
+{% block title %} {{post.title}} {% endblock %}
 
 {% block content %}
 <div class="post">
@@ -27,12 +27,21 @@
 
     {% for comment in post.comments.all %}
 
+      {% if user.is_authenticated or comment.approved %}
+
         <div class="comment">
-            <div class="date">{{ comment.created_date }}</div>
-            <a href="{% url 'comment_remove' pk=comment.pk %}"><i class="far fa-trash-alt"></i></a>
-            <strong>{{ comment.author }}</strong>
-          <p>{{ comment.text }}</p>
+             <div class="date">{{ comment.created_date }}</div>
+
+                 {% if user.is_superuser and not comment.approved %}
+                    <a href="{% url 'comment_approve' pk=comment.pk %}" onclick="return confirm('Do you want to approve this comment?')"><i class="far fa-check-circle"></i></a>
+                    <a href="{% url 'comment_remove' pk=comment.pk %}" onclick="return confirm('Do you want to delete this comment?')"><i class="far fa-trash-alt"></i></a>
+                 {% endif %}
+
+             <strong>{{ comment.author }}</strong>
+             <p>{{ comment.text }}</p>
         </div>
+
+    {% endif %}
 
       {% empty %}
         <p>No Comments Yet.</p>
