--- a/blogi/templates/blogi/post_list.html
+++ b/blogi/templates/blogi/post_list.html
@@ -7,6 +7,7 @@
            <h1><a href="{% url 'post_detail' pk=post.pk %}"> {{ post.title }} </a></h1>
            <h1><{{ post.title }} </a></h1>
            <p>{{ post.text|truncatechars:50 }}</p>
+           <p><a href="{% url 'post_detail' pk=post.pk %}">{{post.approved_comments.count}} comment{{ post.approved_comments.count|pluralize }}</a></p>
        </div>
     {% endfor %}
 
