--- a/blogi/templates/blogi/post_list.html
+++ b/blogi/templates/blogi/post_list.html
@@ -1,13 +1,16 @@
 {% extends 'blogi/base.html' %}
+{% load markdownify %}
+
 {% block title %} Posts {% endblock %}
 {% block content %}
+
     {% for post in posts %}
        <div class="post">
            <div class="date"><p>Published:{{ post.published_date }}</p></div>
            <h1><a href="{% url 'post_detail' pk=post.pk %}"> {{ post.title }} </a></h1>
            <h1><{{ post.title }} </a></h1>
-           <p>{{ post.text|truncatechars:50 }}</p>
-           <p><a href="{% url 'post_detail' pk=post.pk %}">{{post.approved_comments.count}} comment{{ post.approved_comments.count|pluralize }}</a></p>
+           <p>{{ post.text|markdown|safe|truncatechars:200 }}</p>
+           <p><a href="{% url 'post_detail' pk=post.pk %}">{{post.approved_comments.count}} comment</a>{{ post.approved_comments.count|pluralize }}</p>
        </div>
     {% endfor %}
 
